EOTF
Your document includes “Well Known EOTFs”, and from what I can see, there are what appears to be two errors.
The BT.709 specification is strictly an OETF, which is composed of the two part function that approximates to a ~1.9 power function. The definition of the EOTF did not arrive until ITU-R BT 1886, which defines a base 2.4 power function, with some compensation for relative black and white output of the display.
The IEC document regarding sRGB defines an OETF and an EOTF. This can be clearly seen on the reference characteristics page, as well as elsewhere in the document. Take note of the pure 2.2 power function indicated for the reference display EOTF characteristics, as well as in the fully outlined formula that takes the sRGB OETF values as the input.
There may be other issues in the EOTF descriptions.
Hope this helps. Good luck drilling into this terribly labyrinthine and deep rabbit hole.